--- a/SlutionFiles/Readme
+++ b/SlutionFiles/Readme
@@ -1,4 +1,4 @@
-<h2>All solution files will be here</h2>
+<h2>All solution files will be here. Right click and say save as</h2>
 <hr>
 1. Rugrat.soln is original file 
 2. Rugrat-WitouthConfigXml is the latest one
